--- a/PodApp/templates/index.html
+++ b/PodApp/templates/index.html
@@ -3,3 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <title>Solve for X</title>
+</head>
+<body>
+    
+</body>
